--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.1",
+    "grapesjs": "^0.22.5",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "svix": "^1.60.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
